--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "boilerplate",
 	"main": "server.js",
 	"scripts": {
-		"start": "node server.js"
+		"start": "nodemon server.js"
 	},
 	"dependencies": {
 		"body-parser": "^1.15.2",
@@ -14,6 +14,8 @@
 		"dotenv": "^8.2.0",
 		"express": "^4.14.0",
 		"mocha": "^3.2.0",
+		"mongoose": "^6.0.10",
+		"nodemon": "^2.0.13",
 		"zombie": "^5.0.5"
 	},
 	"repository": {
